--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/themost_xml.d.ts",
   "scripts": {
     "build": "rollup -c ./rollup.config.js -m",
-    "test:node": "jasmine",
-    "test": "karma start"
+    "test": "jasmine",
+    "test:karma": "karma start"
   },
   "repository": {
     "type": "git",
@@ -34,12 +34,16 @@
     "karma-jasmine-html-reporter": "^2.0.0",
     "karma-spec-reporter": "^0.0.36",
     "karma-webpack": "^5.0.0",
+    "module-alias": "^2.2.3",
     "rollup": "^2.67.1",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-dts": "^4.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "typescript": "^4.5.5",
-    "webpack": "^5.68.0"
+    "webpack": "^5.86.0"
+  },
+  "dependencies": {
+    "@xmldom/xmldom": "^0.8.8"
   }
 }
